<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#585757"
    tools:context=".ImagePreview">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_wallpaper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#585757"
                android:transitionName="wallpaper" />

            <LinearLayout
                android:id="@+id/ll_contain_infos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:background="#303030"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_publisher_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/username"
                    android:textColor="#4C98FF"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:text="@string/description"
                        android:textColor="#7cffffff"
                        android:textSize="17dp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/tv_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:textColor="#b0ffffff"
                        android:textSize="14dp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_set_wallpaper"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_margin="14dp"
                    android:background="@drawable/btn_add_wallpaper"
                    android:text="@string/set_wallpaper"
                    android:textColor="#fff" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>