<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_account" />

                <TextView
                    android:id="@+id/textToolBar"
                    style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="44dp"
                    android:text="@string/account"
                    android:textAllCaps="true"
                    android:textColor="#fff" />

                <View
                    android:layout_width="70dp"
                    android:layout_height="1dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="70dp"
                    android:background="#fff" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayoutCreateSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/linearLayoutCreateInfo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:visibility="visible">


                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:counterMaxLength="15">

                            <EditText
                                android:id="@+id/et_username"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:drawableLeft="@drawable/ic_person_black_24dp"
                                android:drawablePadding="10dp"
                                android:hint="@string/username"
                                android:inputType="textPersonName"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:counterEnabled="true"
                            app:counterMaxLength="300">

                            <EditText
                                android:id="@+id/et_description"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:autoLink="all"
                                android:drawableLeft="@drawable/ic_description_24dp"
                                android:drawablePadding="10dp"
                                android:hint="@string/description"
                                android:inputType="textMultiLine"
                                android:linksClickable="true"
                                android:maxLines="4"
                                android:textColorLink="@color/colorAccent" />
                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:counterMaxLength="50">

                                <EditText
                                    android:id="@+id/editTextEmail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:drawableLeft="@drawable/ic_email_black_24dp"
                                    android:drawablePadding="10dp"
                                    android:hint="@string/email_hint"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1"
                                    android:text="" />
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:counterEnabled="true"
                                app:counterMaxLength="30"
                                app:passwordToggleEnabled="true">

                                <EditText
                                    android:id="@+id/editTextCode"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:drawablePadding="10dp"
                                    android:drawableStart="@drawable/ic_lock_black_24dp"
                                    android:hint="@string/password"
                                    android:inputType="textPassword"
                                    android:maxLines="1" />
                            </com.google.android.material.textfield.TextInputLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/buttonCreateSignIn"
                                android:layout_width="220dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:layout_marginTop="40dp"
                                android:background="@drawable/btn_add_wallpaper"
                                android:text="@string/sign_in"
                                android:textColor="#ffffff" />

                            <TextView
                                android:id="@+id/textViewCreateAcount"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginTop="8dp"
                                android:text="@string/create_account"
                                android:textColor="#000000" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayoutAccountParams"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_weight="0"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginBottom="4dp"
                            android:layout_marginLeft="20dp"
                            android:text="@string/account_informations"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="#009dff" />

                        <TextView
                            android:id="@+id/textViewShowEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="30dp"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                            android:textColor="#000000" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:layout_weight="0"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/buttonChangePassword"
                            android:layout_width="250dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_marginBottom="20dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/btn_add_wallpaper"
                            android:text="@string/forgot_password"
                            android:textColor="#ffffff" />

                        <Button
                            android:id="@+id/buttonVerifyEmail"
                            android:layout_width="200dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:layout_margin="10dp"
                            android:background="@drawable/btn_add_wallpaper"
                            android:text="@string/verify_email"
                            android:textColor="#ffffff" />

                        <Button
                            android:id="@+id/buttonSignOut"
                            android:layout_width="200dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:background="@drawable/btn_add_wallpaper"
                            android:text="Sign out"
                            android:layout_marginBottom="8dp"
                            android:textColor="#ffffff"
                            android:visibility="visible" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
